[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/hp_bar_dmg.png" type="Texture" id=1]
[ext_resource path="res://Assets/One Eye sprite.png" type="Texture" id=2]
[ext_resource path="res://Assets/hp_bar.png" type="Texture" id=3]
[ext_resource path="res://Player/Player1/Player1.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.02344, 7.55823 )

[sub_resource type="Animation" id=2]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Slide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.0229837, 0.457123 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )
anims/Slide = SubResource( 5 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -7.2, 0 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 7.2, 0 )

[node name="BulletSpawn" type="Node2D" parent="."]
position = Vector2( 9.72271, -0.176777 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
frame = 1
__meta__ = {
"_edit_group_": true
}

[node name="HPBar" type="TextureProgress" parent="."]
margin_left = -5.97298
margin_top = -13.5095
margin_right = 6.02702
margin_bottom = -9.50947
max_value = 10.0
value = 10.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
